Moved errors to be on the same line as the page h1 to fix spacing. Also imported raleway and rokkitt font families

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,600&family=Rokkitt:wght@400;500;600&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -9,6 +11,16 @@ body {
   letter-spacing: 0.9px;
   height: 100vh;
   width: 100%;
+  font-family: "Raleway", "sans-serif";
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Rokkit", 'serif';
 }
 
 .light-mode {
@@ -585,9 +597,6 @@ button:disabled:hover {
     var(--primary-color),
     var(--tri-color),
     var(--tri-bg-color),
-    /* aqua, */
-    var(--bg-5),
-    var(--bg-7),
     var(--primary-submit),
     var(--primary-color)
   );
